# cryosparc-tools

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pyrightconfig.json  setup.py  vercel-install.sh  vercel.json
.github/workflows/: python-package.yml
.vercel/output/: config.json
cryosparc/: __init__.py  _data.py  api.py  api.pyi  auth.py  cdataset.pxd  cli.py  column.py  command.py  constants.py  controller.py  core.py  core.pyi  core.pyx  data.py  dataset.c  dataset.pxd  dataset.py  dtype.py  errors.py  job.py  json_util.py  lz4.pxd  model_registry.py  mrc.py  platform.py  project.py  registry.py  row.py  search.py  session.py  snappy.pxd  spec.py  star.py  stream.py  stream_registry.py  tools.py  util.py  workspace.py
cryosparc/controllers/: __init__.py  job.py  project.py  session.py  workspace.py
cryosparc/dataset/: CMakeLists.txt  __init__.py  column.py  core.pyi  core.pyx  dataset.c  dataset.pxd  dtype.py  row.py
cryosparc/include/cryosparc-tools/: dataset.h
cryosparc/models/: api_request.py  api_response.py  asset.py  auth.py  benchmarks.py  blueprint.py  config.py  diagnostics.py  event.py  exposure.py  external.py  file.py  file_browser.py  gpu.py  instance.py  job.py  job_register.py  job_spec.py  license.py  mongo.py  notification.py  params.py  preview.py  project.py  resource.py  scheduler_lane.py  scheduler_target.py  service.py  services.py  session.py  session_config_profile.py  session_params.py  session_spec.py  signature.py  tag.py  user.py  version.py  when.py  workflow.py  workspace.py
docs/: _config.yml  _toc.yml  api.rst  intro.md  requirements.txt
docs/_static/: custom.css
docs/_templates/: api-module.rst
docs/api/: column.rst  command.rst  cryosparc.rst  dataset.rst  dtype.rst  errors.rst  index.md  job.rst  mrc.rst  project.rst  row.rst  spec.rst  star.rst  tools.rst  util.rst  workspace.rst
docs/examples/: 3dflex-custom-latent-trajectory.ipynb  3dflex-custom-mesh-rigidity-weights.ipynb  connect_series_to_class3D.ipynb  cryolo.ipynb  custom-workflow.ipynb  delete-rejected-exposures.ipynb  hi-res-2d-classes.ipynb  live-session.ipynb  magnification.ipynb  notebooks.ipynb  particle-defocus-shifts.ipynb  recenter-particles.ipynb  upscale-expanded-particles.ipynb  xml-exposure-groups.ipynb
docs/guides/: cli.md  jobs.ipynb
src/: a.out  compile-pymodule.sh  dataset.h  pywrapper_dataset.c  pywrapper_extras.c  pywrapper_module.c  pywrapper_wrapperfunctions.c  test.c  test.sh
tests/: conftest.py  test.c  test.sh  test_api.py  test_cli.py  test_command.py  test_cryosparc.py  test_dataset.py  test_dataset_bench.py  test_job.py  test_project.py  test_star.py  test_tools.py
tests/controllers/: test_job.py
tests/data/: 4k_dataset.cs  job096_run_data.star
typings/cryosparc/: core.pyi
