[project]
name = "cryosparc-tools"
version = "4.6.0"
description = "Toolkit for interfacing with CryoSPARC"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Structura Biotechnology Inc.", email = "info@structura.bio" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]
license = { file = "LICENSE" }
dependencies = ["numpy >= 1.15, < 3.0", "typing-extensions >= 3.7"]

[project.optional-dependencies]
dev = [
    "build",
    "cython",
    "httpretty",
    "pre-commit",
    "pyright",
    "pytest-benchmark",
    "pytest-xdist[psutil]",
    "pytest",
    "ruff",
]

build = ["build", "autodocsumm", "cython", "jupyter-book"]

[project.urls]
Homepage = "https://tools.cryosparc.com"
Documentation = "https://tools.cryosparc.com"
Repository = "https://github.com/cryoem-uoft/cryosparc-tools"
Changelog = "https://github.com/cryoem-uoft/cryosparc-tools/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["cryosparc"]

[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["cryosparc", "tests", "setup.py"]

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
extend-exclude = [".venv*", "cryosparc/include"]
