[project]
name = "cryosparc-tools"
version = "5.0.3"
description = "Toolkit for interfacing with CryoSPARC"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Structura Biotechnology Inc.", email = "info@structura.bio" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]
license = { file = "LICENSE" }
# license = "BSD-3-Clause"  # Note: replace line above with this when supported
dependencies = [
    "numpy >= 1.17, < 3.0",
    "httpx ~= 0.25",
    "pydantic ~= 2.8",
    "typing-extensions >= 4.0",
]

[dependency-groups]
docs = ["autodocsumm", "jupyter-book < 2.0"]
ci = [
    "build",
    "cython",
    "cython-cmake",
    "pyright==1.1.404",
    "pytest",
    "pytest-benchmark",
    "pytest-xdist[psutil]",
    "ruff",
    "scikit-build-core",
]
dev = [
    "autodocsumm",
    "cython",
    "cython-cmake",
    "build",
    "jupyter-book < 2.0",
    "pre-commit",
    "pyright==1.1.404",
    "pytest",
    "pytest-benchmark",
    "pytest-xdist[psutil]",
    "ruff",
    "scikit-build-core",
]

[project.urls]
Homepage = "https://tools.cryosparc.com"
Documentation = "https://tools.cryosparc.com"
Repository = "https://github.com/cryoem-uoft/cryosparc-tools"
Changelog = "https://github.com/cryoem-uoft/cryosparc-tools/blob/main/CHANGELOG.md"

[build-system]
requires = ["scikit-build-core>=0.12", "cython", "cython-cmake"]
build-backend = "scikit_build_core.build"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "cryosparc/**/*.{h,c,pyx,pxd}" }, { file = "CMakeLists.txt" }]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["cryosparc"]

[tool.scikit-build.sdist]
exclude = [
    "cryosparc/include/lz4",
    ".*",
    "*.json",
    "*.md",
    "tests",
    "docs",
]
include = [
    "cryosparc/include/lz4/lib/lz4.h",
    "cryosparc/include/lz4/lib/lz4.c",
    "cryosparc/include/lz4/lib/LICENSE",
    "cryosparc/include/cryosparc-tools/dataset.h"
]

[tool.pyright]
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."
include = ["cryosparc", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "cryosparc/include/**/*.py",
    "docs/_build/**/*.py"
]

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
extend-exclude = [".venv*", "cryosparc/include"]
